--- a/src/styles/modules/_tooltip.scss
+++ b/src/styles/modules/_tooltip.scss
@@ -23,4 +23,9 @@
   .dropdown-menu {
     min-width: 14rem;
   }
+
+  .tooltip-above {
+    bottom: 100%;
+    top: unset;
+  }
 }
